# LLMS

./: .gitignore  pyproject.toml
MCP_test/: InstallazioneOllama.txt  server.py
transformers/: Classification_fine_tuning.ipynb  Gradio_segmentation.py  HO_LLM_01_Tokenizer.ipynb  HO_LLM_02_Tranformer.ipynb  Object_detection01.ipynb  Object_detection02.ipynb  TestPipeline01.ipynb  multiclass_classification_fine_tuning.ipynb  signature_detection.ipynb
