[project]
name = "llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gensim>=4.3.3",
    "httpx>=0.28.1",
    "mcp[cli]>=1.25.0",
    "notebook>=7.4.3",
    "pip>=25.1.1",
    "pymupdf>=1.26.7",
    "transformers>=4.53.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
